--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                             http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                             https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+         version="5.0">
 
     <!-- Application Name -->
     <display-name>Banking Application</display-name>
@@ -22,75 +22,6 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-
-    <!-- Servlets Configuration -->
-    <servlet>
-        <servlet-name>AccountServlet</servlet-name>
-        <servlet-class>com.banking.web.AccountServlet</servlet-class>
-        <init-param>
-            <param-name>defaultCurrency</param-name>
-            <param-value>USD</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>com.banking.web.LoginServlet</servlet-class>
-        <load-on-startup>2</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>TransferServlet</servlet-name>
-        <servlet-class>com.banking.web.TransferServlet</servlet-class>
-        <load-on-startup>3</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>LogoutServlet</servlet-name>
-        <servlet-class>com.banking.web.LogoutServlet</servlet-class>
-        <load-on-startup>4</load-on-startup>
-    </servlet>
-
-    <!-- Servlet Mappings -->
-    <servlet-mapping>
-        <servlet-name>AccountServlet</servlet-name>
-        <url-pattern>/createAccount</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AccountServlet</servlet-name>
-        <url-pattern>/viewAccount</url-pattern> <!-- Added for viewing account details -->
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>TransferServlet</servlet-name>
-        <url-pattern>/transferFunds</url-pattern>
-    </servlet-mapping>
-    <!-- Mapping for LoginServlet -->
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>LogoutServlet</servlet-name>
-        <url-pattern>/logout</url-pattern>
-    </servlet-mapping>
-    <resource-ref>
-        <description>PostgreSQL DataSource</description>
-        <res-ref-name>jdbc/banking</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
-    <!-- Filters Configuration -->
-    <filter>
-        <filter-name>LoggingFilter</filter-name>
-        <filter-class>com.banking.filter.LoggingFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>LoggingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-    <!-- Listeners Configuration -->
-    <listener>
-        <listener-class>com.banking.listener.AppStartupListener</listener-class>
-    </listener>
 
     <!-- Session Configuration -->
     <session-config>
@@ -126,5 +57,13 @@
     <security-role>
         <role-name>admin</role-name>
     </security-role>
+
+    <!-- Resource Reference Configuration (if needed for DataSource) -->
+    <resource-ref>
+        <description>PostgreSQL DataSource</description>
+        <res-ref-name>jdbc/banking</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 
 </web-app>
