--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
         <location>/error500.jsp</location>
     </error-page>
 
-    <!-- Security Configuration (Optional) -->
+    <!-- Security Configuration -->
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>SecureArea</web-resource-name>
@@ -58,10 +58,10 @@
         <role-name>admin</role-name>
     </security-role>
 
-    <!-- Resource Reference Configuration (if needed for DataSource) -->
+    <!-- Resource Reference for DataSource -->
     <resource-ref>
         <description>PostgreSQL DataSource</description>
-        <res-ref-name>jdbc/banking</res-ref-name>
+        <res-ref-name>jdbc/BankingDB</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
